fixing issue public detail
